--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,209 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.inputContainer h1{
+  font-family: 'Playfair Display', serif;
+  font-size: 3.5rem;
   color: white;
+  margin-bottom: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.inputContainer h1 span{
+  color: var(--primary-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.inputContainer div{
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.inputContainer input{
+  width: 100%;
+  padding: 0.5rem 0.2rem 0.5rem 0;
+  text-indent: 1rem;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+
+.inputContainer input::placeholder{
+  font-size: 0.9rem;
+}
+
+.inputContainer button{
+  padding: 0 1rem;
+  height: 3rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  color: white;
+  background-color: var(--primary-color);
+  border: none;
+  cursor: pointer;
+}
+
+/*Result*/
+.result{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
+
+.result p{
+  color: white;
+  border: 1px solid var(--primary-color);
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
+}
+
+.result button{
+  padding: 0.5rem 1rem;
+  color: white;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  border: none;
+}
+
+.result button.copied{
+  background: white;
+  color: var(--primary-color);
+}
+
+.noData{
+  color: white;
+  font-size: 1rem;
+}
+
+/* Background Animate*/
+@keyframes animate {
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
   }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: #4e54c8;
+  overflow: hidden;
+  z-index: -1;
+}
+.background li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 19s linear infinite;
+}
+
+
+
+
+.background li:nth-child(0) {
+  left: 73%;
+  width: 77px;
+  height: 77px;
+  bottom: -77px;
+  animation-delay: 1s;
+}
+.background li:nth-child(1) {
+  left: 49%;
+  width: 109px;
+  height: 109px;
+  bottom: -109px;
+  animation-delay: 4s;
+}
+.background li:nth-child(2) {
+  left: 82%;
+  width: 97px;
+  height: 97px;
+  bottom: -97px;
+  animation-delay: 9s;
+}
+.background li:nth-child(3) {
+  left: 74%;
+  width: 102px;
+  height: 102px;
+  bottom: -102px;
+  animation-delay: 7s;
+}
+.background li:nth-child(4) {
+  left: 53%;
+  width: 70px;
+  height: 70px;
+  bottom: -70px;
+  animation-delay: 3s;
+}
+.background li:nth-child(5) {
+  left: 55%;
+  width: 60px;
+  height: 60px;
+  bottom: -60px;
+  animation-delay: 15s;
+}
+.background li:nth-child(6) {
+  left: 43%;
+  width: 98px;
+  height: 98px;
+  bottom: -98px;
+  animation-delay: 6s;
+}
+.background li:nth-child(7) {
+  left: 70%;
+  width: 59px;
+  height: 59px;
+  bottom: -59px;
+  animation-delay: 18s;
+}
+.background li:nth-child(8) {
+  left: 70%;
+  width: 76px;
+  height: 76px;
+  bottom: -76px;
+  animation-delay: 18s;
+}
+.background li:nth-child(9) {
+  left: 16%;
+  width: 145px;
+  height: 145px;
+  bottom: -145px;
+  animation-delay: 32s;
+}
+.background li:nth-child(10) {
+  left: 10%;
+  width: 142px;
+  height: 142px;
+  bottom: -142px;
+  animation-delay: 21s;
+}
+.background li:nth-child(11) {
+  left: 88%;
+  width: 66px;
+  height: 66px;
+  bottom: -66px;
+  animation-delay: 28s;
 }
